# rustzen-admin

./: .cloud-preview.mjs  .commit_template  .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  NOTICE.md  README-en.md  README-zh-CN.md  README-zh.md  README.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  cliff.toml  clippy.toml  design-qa.md  justfile  package.json  prettier.config.ts  rustfmt.toml
apps/insights/: Cargo.toml  module.toml
apps/insights/migrations/: 0001_init.sql  0002_analytics_mvp.sql  0003_single_project.sql
apps/insights/src/: app.rs  config.rs  main.rs
apps/insights/src/common/: api.rs  error.rs  mod.rs  project_key.rs
apps/insights/src/features/: mod.rs
apps/insights/src/features/overview/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/insights/src/features/projects/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/insights/src/features/query/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/insights/src/features/settings/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/insights/src/features/tracking/: handler.rs  mod.rs  repo.rs  service.rs  tracker.js  types.rs
apps/insights/src/infra/: db.rs
apps/insights/src/middleware/: mod.rs
apps/monitor/: Cargo.toml  module.toml
apps/monitor/migrations/: 0001_init.sql  0002_monitoring_mvp.sql
apps/monitor/src/: app.rs  config.rs  main.rs
apps/monitor/src/common/: api.rs  error.rs
apps/monitor/src/features/: mod.rs
apps/monitor/src/features/checks/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/monitor/src/features/heartbeat/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/monitor/src/features/incidents/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/monitor/src/features/metrics/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/monitor/src/features/nodes/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/monitor/src/features/settings/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
apps/monitor/src/infra/: db.rs  logger.rs
apps/monitor/src/middleware/: mod.rs
apps/reports/: Cargo.toml  build.rs  module.toml
apps/reports/migrations/: 0001_init.sql  0002_automation_mvp.sql
apps/reports/src/: app.rs  config.rs  main.rs
apps/reports/src/common/: api.rs  error.rs
apps/reports/src/features/: mod.rs
apps/reports/src/infra/: db.rs  logger.rs
apps/reports/src/middleware/: mod.rs
apps/server/: AGENTS.md  Cargo.toml
apps/server/migrations/insights/: 0001_init.sql
apps/server/migrations/postgresql_legacy/: 0102_system_relation.sql  README.md
apps/server/migrations/sqlite/: 0001_init.sql  0002_auth.sql  0003_workspace.sql  0004_system_user.sql  0005_system_role.sql  0006_system_menu.sql  0007_system_dict.sql  0010_system_view.sql  0011_system_seed.sql  0012_manage_task_deploy.sql
apps/server/src/: main.rs
apps/server/src/common/: error.rs  files.rs  query.rs
apps/server/src/features/: mod.rs  process_proxy.rs  worker_proxy.rs
apps/server/src/infra/: app.rs  auth_runtime.rs  config.rs  db.rs  logger.rs  password.rs  permission.rs
apps/server/src/middleware/: log.rs
apps/server/src/processes/: common.rs  insights.rs  mod.rs  monitor.rs  reports.rs
apps/server/src/workers/: common.rs  insights.rs  mod.rs  monitor.rs  monitor_update.rs  reports.rs
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 001_system_schema.sql  003_log_system.sql  100100_create_user.sql  100200_create_role.sql  100300_create_menu.sql  100700_create_dict.sql  100900_create_triggers.sql  107000_view_user_with_roles.sql  107002_view_user_menu_info.sql  107003_view_user_info_summary.sql  107005_view_recent_operations.sql  108000_func_user_role.sql  108001_func_user_menu_data.sql  108002_func_user_basic_info.sql  108004_func_user_has_permission.sql  108006_func_log_operation.sql  108007_func_log_operations_bulk.sql  108008_func_create_log_partition.sql  109002_seed_role.sql  109003_seed_dict.sql  109004_seed_log.sql  README.md
backend/migrations/legacy/: 002_system_seed.sql
backend/src/: app.rs  main.rs
backend/src/common/: api.rs  error.rs  mod.rs  response.rs  router_ext.rs
backend/src/core/: app.rs  db.rs  jwt.rs  mod.rs  password.rs
backend/src/features/: mod.rs
backend/src/features/auth/: extractor.rs  middleware.rs  mod.rs  model.rs  permission.rs  repo.rs  router.rs  routes.rs  service.rs
backend/src/features/dict/: model.rs  repo.rs  routes.rs  service.rs
backend/src/features/log/: model.rs  repo.rs  routes.rs  service.rs
backend/src/features/menu/: mod.rs  model.rs  repo.rs  routes.rs  service.rs
backend/src/features/role/: model.rs  repo.rs  routes.rs  service.rs
backend/src/features/system/: mod.rs
backend/src/features/user/: model.rs  repo.rs  routes.rs  service.rs
core/: Cargo.toml
core/src/auth/: extractor.rs  jwt.rs
core/src/permission/: check.rs  mod.rs  route.rs
crates/auth/: AGENTS.md  Cargo.toml
crates/auth/src/: capability.rs  error.rs  lib.rs
crates/auth/src/auth/: claims.rs  context.rs  jwt.rs
crates/auth/src/permission/: check.rs  registry.rs  route.rs
crates/auth/tests/: core_behaviors.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: delegation.rs  extract.rs  health.rs  lib.rs  manifest.rs  response.rs  router.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/storage/: AGENTS.md  Cargo.toml  build.rs
crates/storage/src/: lib.rs  maintenance.rs  migration.rs  sqlite.rs
deploy/: install.sh  (+12 more)
zen-server/: AGENTS.md  Cargo.toml  build.rs
zen-server/migrations/sqlite/: 0001_init.sql
zen-server/src/common/: error.rs  files.rs  query.rs
zen-server/src/features/account/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
zen-server/src/features/auth/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
zen-server/src/features/dashboard/: handler.rs  mod.rs  repo.rs  service.rs
zen-server/src/features/system/: mod.rs
zen-server/src/infra/: app.rs  config.rs  db.rs  password.rs  permission.rs
zen-server/src/middleware/: log.rs
(+849 files in other folders)
