[package]
authors = ["bruce <bruce@idaibin.dev>"]
name = "rustzen-admin"
version = "0.2.2"
edition = "2024"


[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"

# 用于 CORS 和日志中间件
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 数据库相关依赖
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid","ipnetwork"] }
dotenvy = "0.15"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

# JWT 认证
jsonwebtoken = "9.3"

# 异步 trait
async-trait = "0.1"

# Password Hashing
argon2 = "0.5"

