[workspace]
members = [
    "apps/admin",
    "apps/insights",
    "apps/monitor",
    "apps/reports",
    "crates/auth",
    "crates/config",
    "crates/ipc",
    "crates/runtime",
    "crates/storage",
]
resolver = "2"

[workspace.package]
version = "0.5.0"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
