[package]
name = "backend"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 用于 CORS 和日志中间件
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 数据库相关依赖 
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid"] }
dotenvy = "0.15"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

# JWT 认证
jsonwebtoken = "9.3"

# 密码哈希
sha2 = "0.10"
once_cell = "1.21.3"
