[package]
name = "rustzen-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
jsonwebtoken = "9.3"
once_cell = "1.21"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
