[package]
authors = ["Bruce Dai <bruce@idaibin.dev>"]
name = "rustzen-insights"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "rz-insights"
path = "src/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rustzen-auth = { path = "../../crates/auth" }
rustzen-config = { path = "../../crates/config" }
rustzen-ipc = { path = "../../crates/ipc" }
rustzen-storage = { path = "../../crates/storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.5"
