[package]
authors = ["bruce <bruce@idaibin.dev>"]
name = "server"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "rustzen-admin"
path = "src/main.rs"


[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustzen-core = { path = "../../crates/auth" }
rustzen-config = { path = "../../crates/config" }
rustzen-storage = { path = "../../crates/storage" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1.21"
# for CORS and logging middleware
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# database related dependencies
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }
dotenvy = "0.15"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
async-trait = "0.1"

# password hashing
argon2 = "0.6.0-rc.8"
sysinfo = "0.39.3"
tokio-stream = "0.1.17"
futures = "0.3.31"
figment = { version = "0.10.19", features = ["env"] }
