[package]
name = "rustzen-ipc"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
axum = "0.8"
hex = "0.4"
hmac = "0.12"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
