[package]
name = "rustzen-runtime"
version = "0.5.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
uuid = { version = "1.17", features = ["v4"] }
