[package]
name = "rustzen-storage"
version = "0.5.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }
